# rubik

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CD.yml  CI.yml  publish.yml  test.yml
src/: lib.rs  main.rs
src/algorithms/: error.rs
src/cubes/: base.rs  mod.rs
src/cubes/regular/: mod.rs
